# Competitor_Agent

./: .env example  .gitignore  README.md  harness实现.md  list_run_competitor_analyses.py  test_full_flow.py  test_full_flow_no_qa.py  test_llm.py  test_planner_llm.py  test_pricing_model_schema_collection.py  test_qa_report_rework.py  test_tavily_extract_zhihu.py  评分细则.txt
backend/: .dockerignore  .env example  .gitignore  Dockerfile  FRONTEND_WORKSPACE_API.md  README-zh.md  README-zn.md  README.md  TRAE_IMPLEMENTATION_PLAN.md  docker-compose.yml  docs_collector_tools.md  pyproject.toml  test_llm.py  test_vision_llm.py  竞品分析报告模板模板.docx
backend/app/: main.py
backend/collector_exports/: collector_preview_result_20260523_131401_b639ec.json  collector_preview_result_20260523_131652_3a5b77.json  collector_preview_result_20260523_142725_09fe9b.json  collector_preview_result_20260523_160711_76ee80.json
backend/collector_raw/: run_f07666b74f47_38daa419f05faa10cea0a36aea34eaa93f7c3321c5d3d30764adbb4764936ba0.txt  run_f07666b74f47_650cf05daf6ff286433b3f9b28d62b1c90b0c9529647e422562dcf5597279058.txt  run_f07666b74f47_6bc317275f82331b47c9a00ecaf487ebe02ed3842b0a854641c9f1524fb75864.txt  run_f07666b74f47_6dc338caaabb768a6faccfbf43c65aa5745aa0dbab59931e5ffbc0e1762f31be.txt  run_f07666b74f47_79d021c41611c457839ec8525eaa6cc3a0800ab3dcb3627f2167411031e3a230.txt  run_f07666b74f47_7eed8ee5bead02375db8388957362cdfba7bdb91ed4cce547119b46a6c9c8a0b.txt  run_f07666b74f47_991eab44f9ca68d70ffbe05f20963a5b87a97df94fb554facb7979eec814d25f.txt  (+3 more)
backend/scripts/: migrate_sqlite_to_postgres.py
(+1454 files in other folders)
